--- a/themes/bs4/html/pages/footer.html
+++ b/themes/bs4/html/pages/footer.html
@@ -7,13 +7,13 @@
 	
 	{$scripts.footer}
 
-	<div id="wvLoader" style="display: none;">
-	    <div style="position: absolute; width: 100%; height: 100%; margin: 0 auto; padding: 200px 0;">
-	        <div align="center">
-	            <img src="{$theme.url}/images/spin.gif">
-	        </div>
-	    </div>
-	</div>
+	<!--<div id="wvLoader" style="display: none;">-->
+	<!--    <div style="position: absolute; width: 100%; height: 100%; margin: 0 auto; padding: 200px 0;">-->
+	<!--        <div align="center">-->
+	<!--            <img src="{$theme.url}/images/spin.gif">-->
+	<!--        </div>-->
+	<!--    </div>-->
+	<!--</div>-->
 	<script type="text/javascript">
 		function isApp() {
             return navigator.userAgent.match(/iPhone|iPad|iPod|Android/i);
